# django_app

./: pyproject.toml  shell.nix
src/web/: settings.py  urls.py
src/web/base_app/templates/: index.html
src/web/blog_app/: apps.py  urls.py  views.py
src/web/homepage_app/: apps.py  urls.py  views.py
src/web/login_app/: apps.py  urls.py  views.py
