[project]
name = "django_app"
version = "0.1.0"
description = "Simple App"
authors = [
    {name = "yosephbernandus", email = "yosephbernandus@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
    "pre-commit>=3.6.1",
    "ruff>=0.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
